# myapp

./: .clang-format  .clang-tidy  meson.build  meson.options
src/: main.c  mylib.c  mylib.h
tests/: test_mylib.c  test_mylib_g.cpp
